--- a/pagina1.html
+++ b/pagina1.html
@@ -1,12 +1,30 @@
-<!doctype. html>
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>página 1</title>
+		<title></title>
 		<meta charset="utf-8">
 	</head>
 	<body>
-		<h2>Página 1</h2>
-		<a href="index.html">Voltar</a>
+			<header>
+			<img src="imagens/imagem3.png">
+			
+		</header>
+		<nav>
+			<a href="index.html">Home</a> |
+			<a href="blog.html">Blog</a> |
+			<a href="pagina1.html">Pagina 1</a> |
+			<a href="pagina2.html">Pagina 2</a> |
+			<a href="contato">Contato</a> |
+		</nav>
+		<section>
+			<h2>Aula prática<h2>
+			<p>Conhecendo HTML</p>
+			<hr/>
+			<video src="video\video4.mp4"controls></video>
+		</section>
+		<footer>
+			<hr/>
+			<small>&copy; Criado por: Adrian - 2021</
+		</footer>
 	</body>
 </html>
